--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div id='spinner-container'>
       <div id='spinner'>
-        <img alt="primary spinner" class="spinner" src='./assets/spinners/base.png'>
+        <img alt="primary spinner" class="spinner" src='base.png'>
         <div id='trace-slow'>
           <img alt="spinner" class='spinner spinner-trace-1' src='./assets/spinners/base.png'>
           <img alt="spinner" class='spinner spinner-trace-2' src='./assets/spinners/base.png'>
