--- a/index.html
+++ b/index.html
@@ -1,78 +1,12 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="stylesheet" href="./main.css">
-    <meta name="theme-color" content="#ffffff">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="preload" as="script" href="./index.js">
-    <link rel="preload" as="image" href="./assets/spinners/base.png">
-    <link rel="preload" as="image" href="./assets/mute.svg">
-    <link rel="preload" as="image" href="./assets/volume.svg">
-    <link rel="manifest" href="./manifest.json">
-    <title>Fidget Spinner</title>
+    <meta name="viewport" content="width=device-width">
+    <title>replit</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
-    <div id="header">
-      <div class="turns">
-        <div class="spin-icon">
-          <div class="coin-lift">
-            <img class="spin-img spin-img-dark" alt="spin count icon" src="./assets/dark_rotate.svg">
-            <img class="spin-img" alt="spin count icon" src="./assets/rotate.svg">
-          </div>
-        </div>
-        <div class="turns-text">
-          <div id="turns">0</div>
-          <div class="turns-unit">spins</div>
-        </div>
-      </div>
-      <div class="speed">
-        <div class="velocity-display">
-          <div id="velocity">0</div>
-          <div class="velocity-unit"> RPM</div>
-          <img class="speed-icon" alt="speed indicator icon" src="./assets/speed_icon.svg">
-        </div>
-      </div>
-    </div>
-    
-    <ul class="hidden" id="spinner-picker"></ul>
 
-    <div id='spinner-container'>
-      <div id='spinner'>
-        <img alt="primary spinner" class="spinner" src='base.png'>
-        <div id='trace-slow'>
-          <img alt="spinner" class='spinner spinner-trace-1' src='./assets/spinners/base.png'>
-          <img alt="spinner" class='spinner spinner-trace-2' src='./assets/spinners/base.png'>
-          <img alt="spinner" class='spinner spinner-trace-5' src='./assets/spinners/base.png'>
-          <img alt="spinner" class='spinner spinner-trace-6' src='./assets/spinners/base.png'>
-        </div>
-        <div id='trace-fast'>
-          <img alt="spinner" class='spinner spinner-trace-3' src='./assets/spinners/base.png'>
-          <img alt="spinner" class='spinner spinner-trace-4' src='./assets/spinners/base.png'>
-          <img alt="spinner" class='spinner spinner-trace-7' src='./assets/spinners/base.png'>
-          <img alt="spinner" class='spinner spinner-trace-8' src='./assets/spinners/base.png'>
-        </div>
-      </div>
-    </div>
-
-
-    <div id="footer">
-      <div class="menu">
-        <div class="menu-item" id="toggle-audio"></div>
-        <div class="max-velocity">
-          <div class="max-velocity-unit">MAX RPM</div>
-          <div id="maxVelocity">0</div>
-        </div>
-        <div class="menu-item" id="picker"></div>
-      </div>
-    </div>
-    <script src="./index.js"></script>
-   
+    <script src="script.js"></script>
   </body>
 </html>
