--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>replit</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-<div class="rotate"><div>
-
+<div class="rotate"></div>
     <script src="script.js"></script>
   </body>
 </html>
