--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 <div class="rotate"></div>
+  <img src="base.png" alt="Italian Trulli">
+<div>
     <script src="script.js"></script>
   </body>
 </html>
