--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>replit</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-<div class="rotate"></div>
-  <img src="base.png" alt="Italian Trulli">
-<div>
+
+  <img src="base.png" animation: rotation 2s infinite linear;
+ alt="Italian Trulli">
+
     <script src="script.js"></script>
   </body>
 </html>
