--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
-  <img src="base.png" animation: rotation 2s infinite linear;
- alt="Italian Trulli">
+<img
+  src="base.png"
+  class="rotate linear infinite"
+  width="150"
+  height="150"
+/>
 
     <script src="script.js"></script>
   </body>
