--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>replit</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
+  
+<body onload="myFunction()">
 
 <img
   src="base.png"
