--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   
-<body onload="myFunction()">
+<body onload="confirm()">
 
 <img
   src="base.png"
